# vision-2026

./: .gitignore  pyproject.toml  type_hint_practice.py
config/: model_config.yaml
datasets/Bursa_Traffic_v1/: README.dataset.txt  README.roboflow.txt  data.yaml
datasets/Bursa_Traffic_v1/train/: labels.cache
datasets/Bursa_Traffic_v1/train/labels/: beyaz-t10x_01_jpg.rf.084fd3d38d87274076c6c0ce5e10a7ac.txt  beyaz-t10x_01_jpg.rf.46b340ee659542db2fbc424a06196b40.txt  beyaz-t10x_01_jpg.rf.85eba654e5cfbcbd5ecc4ddaed903d46.txt  beyaz-t10x_03_jpg.rf.9367e3b97f3073959f3dc2336efc0a8e.txt  beyaz-t10x_03_jpg.rf.a75ea726f95bcb81464954527b0d82c3.txt  beyaz-t10x_03_jpg.rf.ef4f8faab2c0e39dfb4988782b22a95a.txt  beyaz-t10x_04_jpg.rf.41c7b555955e369c69e63f6aeb6b4b52.txt  (+41 more)
datasets/Bursa_Traffic_v1/valid/: labels.cache
datasets/coco8/labels/: train.cache  val.cache
experiments/: IntersectionCamera_withOOP.py  click_points.py  homography_toy_v2.py  intersection.py  speed_measurement.py  traffic_light.py
experiments/foundations/dip-gonzalez/: mini_app.py  sil_test_.py
experiments/proj03_speed_radar/: speed_measurer.py
experiments/proj03_speed_radar/contract/: speed_report_example.json  speed_report_schema.md
experiments/proj03_speed_radar/micro_lab_homography/: homography_toy.py  main.py  pyproject.toml
src/: perspective_transformer.py
src/p1_detector/: train.py
src/p1_detector/data/: ingest.py
src/p1_detector/models/: yolo.py
src/tracker/: core.py  counter.py
src/tracker/labs/: Untitled.ipynb  kalman_1d.py
tests/: test_speed_measurer.py  test_tracker.py
(+8 files in other folders)
