[project]
name = "vision-2026"
version = "0.1.0"
description = "ITS Authority Roadmap - Lead Traffic Expert"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ultralytics>=8.0.0",
    "pyyaml>=6.0",
    "numpy>=2.2.6",
    "filterpy>=1.4.5",
    "matplotlib>=3.10.8",
    "scipy>=1.15.3",
    "opencv-python>=4.13.0.92",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.pytest.ini_options]
pythonpath = ["experiments/proj03_speed_radar"]

[tool.hatch.build.targets.wheel]
packages = ["src/p1_detector"]

[tool.uv.workspace]
members = [
    "experiments/proj03_speed_radar/micro_lab_homography",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
